--- a/style.css
+++ b/style.css
@@ -29,19 +29,15 @@ text-decoration: none;;
     float: left;
 }
 
+
 .logo_container h1{
+    font-weight: 800;
     color: #1C2226;
     height: 100%;
     display: table-cell;
     vertical-align: middle;
     font-family: 'Montserrat';
     font-size: 32px;
-    font-weight: 200;
-
-}
-
-.logo_container h1 span{
-    font-weight: 800;
 }
 
 .navigation{
@@ -61,10 +57,15 @@ text-decoration: none;;
     display: table-cell;
     vertical-align: middle;
     height: 100%;
-    color: white;
+    color: rgb(20, 20, 20);
     font-family:'Montserrat';
     font-size: 16px;
 
+}
+
+.navigation a li:hover{
+    background-color: rgb(250, 252, 251);
+    opacity: 100%%;
 }
 
 .mainPage{
