--- a/style.css
+++ b/style.css
@@ -2,22 +2,23 @@
 /* CSS Document */ 
 /* The body tag style applies to all elements on the page */ 
 *{ 
-padding:0px; 
-margin:0px; 
-list-style: none;
-text-decoration: none;;
+padding:0px; /* no padding */
+margin:0px; /* no margin */
+list-style: none; /* no list style */
+text-decoration: none; /* no text decor */
 } 
 
+/* header for title and nav menu */
 .header{
-    width: 100%;
-    height: 100px;
-    display: block;
-    background-color: #0A0A0A;
+    width: 100%; /* full width */
+    height: 100px; /* full height */
+    display: block; /* block display */
+    background-color: #0A0A0A; /* header backround color is black */
 }
 
 .inner_header{
-    width: 1000px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     display: block;
     margin: 0 auto;
     background-color: #0A0A0A;
@@ -32,7 +33,7 @@ text-decoration: none;;
 
 
 .logo_container h1{
-    font-weight: 800;
+    font-weight: 800; /* boldness of the font is high */
     color: #B3B3B3;
     height: 100%;
     display: table-cell;
@@ -58,21 +59,79 @@ text-decoration: none;;
     display: table-cell;
     vertical-align: middle;
     height: 100%;
-    color: #B3B3B3;
+    color: #e9e9e9;
     font-family:'Montserrat';
     font-size: 16px;
 
 }
 
-.navigation a li:hover{
-    background-color: rgb(248, 251, 253);
-    opacity: 100%;
-    border-radius: 100px;
+/* styles the nav menu with hover features */
+.navigation a li:hover{ 
+    color: rgb(158, 157, 157); /* color of text when you hover over it */
+    opacity: 100%; /* full opacity */
 }
 
+/* styles the main backround of all the pages */
 .mainPage{
-    height: 800px;
-    display:block;
-    background-color: #B3B3B3;
+    height: 800px; /* height of page */
+    display:block; /* block display */
+    background-color: #B3B3B3; /* almost white backround color */
 }
 
+/* Used to style form input boxes */
+input[type=text], select, textarea {
+    width: 100%; /* full width */
+    padding: 12px; /* adds padding */ 
+    border: 1px solid #B3B3B3; /* border color */
+    border-radius: 4px; /* rounds borders */
+    box-sizing: border-box; /* keeps padding and width in place */
+    margin-top: 6px; /* top marigin */
+    margin-bottom: 16px; /* bottom margin */
+  }
+
+  /* Used to style form input boxes */
+  input[type=number], select, textarea {
+    width: 100%; /* full width */
+    padding: 12px; /* addspadding */ 
+    border: 1px solid #B3B3B3; /* border color */
+    border-radius: 4px; /* rounds borders */
+    box-sizing: border-box; /* keeps padding and width in place */
+    margin-top: 6px; /*top margin */
+    margin-bottom: 16px; /* bottom margin */
+  }
+
+  /* Used to style form input boxes */
+  input[type=email], select, textarea {
+    width: 100%; /* full width */
+    padding: 12px; /* adds padding */ 
+    border: 1px solid #B3B3B3; /* border color */
+    border-radius: 4px; /* rounds borders */
+    box-sizing: border-box; /* keeps padding and width in place */
+    margin-top: 6px; /*top margin */
+    margin-bottom: 16px; /* bottom margin */
+  }
+  
+  /* styles the submit button*/
+  input[type=submit] {
+    background-color: #e9e9e9; /* submit button color */
+    color: #0A0A0A; /* text color */ 
+    padding: 12px 20px; /* adds padding */
+    border: none; /* no border */
+    border-radius: 4px; /* rounds borders */
+    cursor: pointer; /* adds pointer cursor for user to see they can click */
+  }
+  
+  /* when user moves the mouse over the submit button it changes color slightly */
+  input[type=submit]:hover {
+    background-color: #c6c5c5; /* changes to this color */
+  }
+  
+
+  /* Add a background color and some padding around the form */
+  .formcontainer {
+    width: 50%;
+    border-radius: 5px;
+    background-color: #0A0A0A;
+    padding: 20px;
+    position:absolute;
+  }
