--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 /* CSS Document */ 
 /* The body tag style applies to all elements on the page */ 
 *{ 
-padding:0px; /* no padding */
-margin:0px; /* no margin */
+padding:0%; /* no padding */
+margin:0%; /* no margin */
 list-style: none; /* no list style */
 text-decoration: none; /* no text decor */
 } 
@@ -11,7 +11,7 @@ text-decoration: none; /* no text decor */
 /* header for title and nav menu */
 .header{
     width: 100%; /* full width */
-    height: 100px; /* full height */
+    height: 10%; /* set height */
     display: block; /* block display */
     background-color: #0A0A0A; /* header backround color is black */
 }
@@ -20,9 +20,9 @@ text-decoration: none; /* no text decor */
     width: 100%;
     height: 100%;
     display: block;
-    margin: 0 auto;
+    margin-left:  50%;
     background-color: #0A0A0A;
-    border-radius: 80px;
+    border-radius: 10%;
 }
 
 .logo_container{
@@ -35,7 +35,6 @@ text-decoration: none; /* no text decor */
 .logo_container h1{
     font-weight: 800; /* boldness of the font is high */
     color: #B3B3B3;
-    height: 100%;
     display: table-cell;
     vertical-align: middle;
     font-family: 'Montserrat';
@@ -43,25 +42,29 @@ text-decoration: none; /* no text decor */
 }
 
 .navigation{
-    float: right;
     height: 100%;
+    width: 100%;
+    text-align: right;
 
 }
 
 .navigation a{
+    text-align: right;
     height:100%;
     display: table;
     float: left;
-    padding: 0px 20px;
+    padding: 0% 20px;
 }
 
 .navigation a li{
     display: table-cell;
-    vertical-align: middle;
+    text-align: right;
     height: 100%;
     color: #e9e9e9;
     font-family:'Montserrat';
     font-size: 16px;
+    padding: 0% 20px;
+    position: relative;
 
 }
 
@@ -73,7 +76,9 @@ text-decoration: none; /* no text decor */
 
 /* styles the main backround of all the pages */
 .mainPage{
-    height: 800px; /* height of page */
+    height: 100%; /* height of page */
+    width: 100%;
+    position: absolute;
     display:block; /* block display */
     background-color: #B3B3B3; /* almost white backround color */
 }
@@ -81,34 +86,34 @@ text-decoration: none; /* no text decor */
 /* Used to style form input boxes */
 input[type=text], select, textarea {
     width: 100%; /* full width */
-    padding: 12px; /* adds padding */ 
-    border: 1px solid #B3B3B3; /* border color */
-    border-radius: 4px; /* rounds borders */
+    padding: 2%; /* adds padding */ 
+    border: 1% solid #B3B3B3; /* border color */
+    border-radius: 3%; /* rounds borders */
     box-sizing: border-box; /* keeps padding and width in place */
-    margin-top: 6px; /* top marigin */
-    margin-bottom: 16px; /* bottom margin */
+    margin-top: 1%; /* top marigin */
+    margin-bottom: 4%; /* bottom margin */
   }
 
   /* Used to style form input boxes */
   input[type=number], select, textarea {
     width: 100%; /* full width */
-    padding: 12px; /* addspadding */ 
-    border: 1px solid #B3B3B3; /* border color */
-    border-radius: 4px; /* rounds borders */
+    padding: 2%; /* addspadding */ 
+    border: 1% solid #B3B3B3; /* border color */
+    border-radius: 1%; /* rounds borders */
     box-sizing: border-box; /* keeps padding and width in place */
-    margin-top: 6px; /*top margin */
-    margin-bottom: 16px; /* bottom margin */
+    margin-top: 1%; /*top margin */
+    margin-bottom: 4%; /* bottom margin */
   }
 
   /* Used to style form input boxes */
   input[type=email], select, textarea {
     width: 100%; /* full width */
-    padding: 12px; /* adds padding */ 
-    border: 1px solid #B3B3B3; /* border color */
-    border-radius: 4px; /* rounds borders */
+    padding: 2%; /* adds padding */ 
+    border: 1% solid #B3B3B3; /* border color */
+    border-radius: 1%; /* rounds borders */
     box-sizing: border-box; /* keeps padding and width in place */
-    margin-top: 6px; /*top margin */
-    margin-bottom: 16px; /* bottom margin */
+    margin-top: 1%; /*top margin */
+    margin-bottom: 4%; /* bottom margin */
   }
   
   /* styles the submit button*/
@@ -130,8 +135,8 @@ input[type=text], select, textarea {
   /* Add a background color and some padding around the form */
   .formcontainer {
     width: 50%;
+    display:block;
     border-radius: 5px;
     background-color: #0A0A0A;
-    padding: 20px;
-    position:absolute;
+    padding: 2%;
   }
