--- a/style.css
+++ b/style.css
@@ -16,55 +16,52 @@ text-decoration: none; /* no text decor */
     background-color: #0A0A0A; /* header backround color is black */
 }
 
-.inner_header{
-    width: 100%;
-    height: 100%;
-    display: block;
-    margin-left:  50%;
-    background-color: #0A0A0A;
-    border-radius: 10%;
-}
 
-.logo_container{
-    height:100%;
-    display: table;
-    float: left;
+/* styles header container */
+.header_container{
+    height:100%; /* full height */
+    display: table; /* displays as a table */
+    float: left; /* floats to left of its container */
 }
 
 
-.logo_container h1{
+/* styles header on top of each page */
+.header_container h1{
     font-weight: 800; /* boldness of the font is high */
-    color: #B3B3B3;
-    display: table-cell;
-    vertical-align: middle;
-    font-family: 'Montserrat';
-    font-size: 32px;
+    color: #B3B3B3; /* sets font color */
+    display: table-cell; /* table cell display type */
+    vertical-align: middle; /* vertically aligned in middle */
+    font-family: 'Montserrat'; /* specifies font */
+    font-size: 32px; /* size of font */
 }
 
+/* styles nav menu */
 .navigation{
-    height: 100%;
-    width: 100%;
-    text-align: right;
+    height: 100%; /* full height of nav menu */
+    width: 100%; /* nav menu full width */
+    text-align: right; /* pushes text to the right */
 
 }
 
+/* styles hyperlinks in nav menu */
 .navigation a{
-    text-align: right;
-    height:100%;
-    display: table;
-    float: left;
-    padding: 0% 20px;
+    text-align: right; /* pushes text to the right */
+    height:100%; /* full height  */
+    display: table; /*  displays in a table */
+    float: left; /* places element to left side of its container */
+    padding: 0% 20px; /* adds padding */
 }
 
+/* styles list elements */
 .navigation a li{
-    display: table-cell;
-    text-align: right;
-    height: 100%;
-    color: #e9e9e9;
-    font-family:'Montserrat';
-    font-size: 16px;
-    padding: 0% 20px;
-    position: relative;
+    display: table-cell; /* displays as a table cell */
+    text-align: right; /* pushes text to the right */
+    height: 100%; /* full height */
+    color: #e9e9e9; /* sets color */
+    font-family:'Montserrat'; /* font style */
+    font-size: 16px; /* sets font size */
+    padding: 0% 20px; /* adds padding */
+    position: relative; /*  relative positioning */
 
 }
 
@@ -134,9 +131,9 @@ input[type=text], select, textarea {
 
   /* Add a background color and some padding around the form */
   .formcontainer {
-    width: 50%;
-    display:block;
-    border-radius: 5px;
-    background-color: #0A0A0A;
-    padding: 2%;
+    width: 50%; /* half width */
+    display:block; /* displays as a block */
+    border-radius: 5px; /* rounds border */
+    background-color: #0A0A0A; /* sets backround color */
+    padding: 2%; /* adds padding */
   }
