--- a/monitor.css
+++ b/monitor.css
@@ -1,3 +1,4 @@
+
 @charset "UTF-8"; 
 /* CSS Document */ 
 /* The body tag style applies to all elements on the page */ 
@@ -33,6 +34,24 @@ text-decoration: none; /* no text decor */
     vertical-align: middle; /* vertically aligned in middle */
     font-family: 'Montserrat'; /* specifies font */
     font-size: 32px; /* size of font */
+}
+
+.abouttext p{
+  font-weight: 100; /* boldness of the font is high */
+  color: #0c0c0c; /* sets font color */
+  display: table-cell; /* table cell display type */
+  position:absolute;
+  vertical-align: middle; /* vertically aligned in middle */
+  font-family: 'Montserrat'; /* specifies font */
+  font-size: 16px;
+  margin-top: 3%;
+
+}
+
+.aboutme video{
+margin-top: 2%;
+margin-left: 1%;
+
 }
 
 /* styles nav menu */
@@ -78,6 +97,7 @@ text-decoration: none; /* no text decor */
     position: absolute;
     display:block; /* block display */
     background-color: #B3B3B3; /* almost white backround color */
+    clear: both;
 }
 
 /* Used to style form input boxes */
@@ -133,8 +153,24 @@ input[type=text], select, textarea {
   .formcontainer {
     width: 50%; /* half width */
     display:block; /* displays as a block */
+    position:absolute;
     border-radius: 5px; /* rounds border */
     outline: #0A0A0A;
     background-image: linear-gradient(to bottom right, #B3B3B3,#0A0A0A ); /* sets backround color */
     padding: 2%; /* adds padding */
+  }
+
+  .gradientbox{
+    width:50%;
+    height: 70%;
+    position: absolute;
+    display: block;
+    margin-left: 50%;
+    background-image: linear-gradient(90deg, #0A0A0A 50%, #B3B3B3);
+    clear: both;
+  }
+
+  .gradientbox p,h2{
+    color: #B3B3B3;
+
   }
