"added final touches in css files and added footer"

--- a/monitor.css
+++ b/monitor.css
@@ -174,3 +174,8 @@ input[type=text], select, textarea {
     color: #B3B3B3;
 
   }
+
+  footer{
+    clear: both;
+    vertical-align: bottom;
+  }
