--- a/monitor.css
+++ b/monitor.css
@@ -160,22 +160,25 @@ input[type=text], select, textarea {
     padding: 2%; /* adds padding */
   }
 
+  /* styles gradient box on projects page */
   .gradientbox{
-    width:50%;
-    height: 70%;
-    position: absolute;
-    display: block;
-    margin-left: 50%;
-    background-image: linear-gradient(90deg, #0A0A0A 50%, #B3B3B3);
-    clear: both;
+    width:50%; /* half width */
+    height: 70%; /* 70% height */
+    position: absolute; /* positioned in front */
+    display: block; /* displayed as a block  */
+    margin-left: 50%; /* pushes box to te right */
+    background-image: linear-gradient(90deg, #0A0A0A 50%, #B3B3B3); /* adds gradient */
+    clear: both; /* clears floating elements */
   }
 
+  /* styles h2 and p in gradient box */
   .gradientbox p,h2{
-    color: #B3B3B3;
+    color: #B3B3B3; /* colors text */
 
   }
 
+  /* styles footer */
   footer{
-    clear: both;
-    vertical-align: bottom;
+    clear: both; /* clears all floating elements */
+    vertical-align: bottom; /* puts footer at bottom */
   }
