--- a/phone.css
+++ b/phone.css
@@ -160,9 +160,9 @@ input[type=text], select, textarea {
   }
 
   .gradientbox{
-    width:50%;
+    width:50%; /* half width*/
     height: 70%;
-    position: absolute;
+    position: absolute; 
     display: block;
     margin-left: 50%;
     background-image: linear-gradient(90deg, #0A0A0A 50%, #B3B3B3);
